[gd_scene load_steps=10 format=3 uid="uid://4j0otasjtw7b"]

[ext_resource type="Script" uid="uid://y2dpgw41kl8j" path="res://scenes/game/game.gd" id="1_87uf6"]
[ext_resource type="PackedScene" uid="uid://8lrpv78gfhfa" path="res://scenes/terminal/terminal.tscn" id="2_2a8rs"]
[ext_resource type="AudioStream" uid="uid://bwinosnrlhtc" path="res://assets/SFX/Game SFX/correct.wav" id="3_4j704"]
[ext_resource type="AudioStream" uid="uid://lr4bqr6wyyrp" path="res://assets/SFX/button clicks/keypress0.wav" id="4_kp23o"]
[ext_resource type="AudioStream" uid="uid://xxe2mckdx8fs" path="res://assets/SFX/Game SFX/incorrect_sound.wav" id="5_5jirj"]
[ext_resource type="Script" uid="uid://bhd3uomwv1j5v" path="res://scripts/data.gd" id="6_vaxfo"]
[ext_resource type="PackedScene" uid="uid://be6krggkl251t" path="res://scenes/ui/game_states/win_screen.tscn" id="7_ftsea"]
[ext_resource type="PackedScene" uid="uid://cg880pmddjqbh" path="res://scenes/ui/game_states/lose_screen.tscn" id="8_2a8rs"]
[ext_resource type="Texture2D" uid="uid://15agujvrx28e" path="res://assets/textures/heart.png" id="8_otnwt"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87uf6")
correct_before_life_increase = 3
mistakes_before_life_loss = 3
max_lives = 5
lives = 3

[node name="Terminal" parent="." instance=ExtResource("2_2a8rs")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.691
offset_left = 24.0
offset_top = 0.231964
offset_right = -24.0
offset_bottom = -32.0

[node name="CorrectSound" type="AudioStreamPlayer" parent="Terminal"]
unique_name_in_owner = true
stream = ExtResource("3_4j704")
bus = &"SFX"

[node name="KeyPress" type="AudioStreamPlayer" parent="Terminal"]
unique_name_in_owner = true
stream = ExtResource("4_kp23o")
volume_db = -15.0
bus = &"Typing"

[node name="IncorrectSound" type="AudioStreamPlayer" parent="Terminal"]
unique_name_in_owner = true
stream = ExtResource("5_5jirj")
bus = &"SFX"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 48.0
text = "< Back"

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
text = "Score: 0"

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -248.0
offset_top = 16.0
offset_right = -152.0
offset_bottom = 48.0
grow_horizontal = 0
text = "Time: 0"

[node name="Data" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_vaxfo")

[node name="VisualisationContainer" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.593
offset_left = 16.0
offset_top = 56.0
offset_right = -16.0
offset_bottom = -0.264038
grow_horizontal = 2
grow_vertical = 2

[node name="Visualisation" type="Control" parent="VisualisationContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinScreen" parent="VisualisationContainer" instance=ExtResource("7_ftsea")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="LoseScreen" parent="VisualisationContainer" instance=ExtResource("8_2a8rs")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Lives" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.605
anchor_right = 1.0
anchor_bottom = 0.679
offset_left = 128.0
offset_top = -0.0400085
offset_right = -128.0
offset_bottom = 0.00799561
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LifeDisplay1" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[node name="LifeDisplay2" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[node name="LifeDisplay3" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[node name="LifeDisplay4" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[node name="LifeDisplay5" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[node name="LifeDisplay6" type="TextureRect" parent="Lives"]
visible = false
layout_mode = 2
texture = ExtResource("8_otnwt")
expand_mode = 2

[connection signal="game_lose" from="." to="Terminal" method="game_over"]
[connection signal="game_win" from="." to="Terminal" method="game_over"]
[connection signal="correct_word_entered" from="Terminal" to="." method="typing_correct"]
[connection signal="incorrect_character_entered" from="Terminal" to="." method="typing_incorrect"]
[connection signal="key_pressed" from="Terminal" to="Terminal/KeyPress" method="play"]
[connection signal="typing_complete" from="Terminal" to="." method="typing_complete"]
[connection signal="pressed" from="BackButton" to="." method="exit_lesson"]
[connection signal="back" from="VisualisationContainer/WinScreen" to="." method="exit_lesson"]
[connection signal="next" from="VisualisationContainer/WinScreen" to="." method="next_lesson"]
[connection signal="restart" from="VisualisationContainer/WinScreen" to="." method="restart_lesson"]
[connection signal="back" from="VisualisationContainer/LoseScreen" to="." method="exit_lesson"]
[connection signal="restart" from="VisualisationContainer/LoseScreen" to="." method="restart_lesson"]
